# projeto-oc

./: manage.py  pyproject.toml  selecT_dinamico.js
controle/: admin.py  apps.py  context_processors.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
controle/management/commands/: estrutura_prisional.json  popula_estrutura_prisional.py  popular_ari.py  popular_casas_prisionais.py  popular_cidades.py
controle/migrations/: 0001_initial.py  0002_alter_casaprisional_tipo_estrutura.py  0002_orcrim_logo_orcrim.py  0002_remove_individuo_grau_importancia.py  0003_alojamento_orcrim.py  0003_remove_individuo_grau_importancia.py  0004_alter_individuo_rg_cpf.py  0004_galeria_orcrim.py  0005_alter_orcrim_options.py  0005_remove_orcrim_area_atuacao.py  0006_remove_galeria_orcrim_galeria_orcrims.py  0007_alter_individuo_regime.py  0008_movimentacao.py  0009_movimentacao_data_registro_and_more.py  0010_individuo_data_entrada_unidade.py  0011_alter_individuo_data_entrada_unidade.py  0012_alter_movimentacao_data_entrada_and_more.py  0013_alter_movimentacao_data_entrada_and_more.py
controle/templates/: 404.html  base.html  home.html  messages.html  navbar.html  pdf_individuo.html
controle/templates/admin/: action_confirmation.html
controle/templates/casaprisional/: busca_individuos.html  busca_por_cela.html  casaprisional_confirm_delete.html  casaprisional_form.html  casaprisional_list.html  listar_detentos_alojamento.html
controle/templates/orcrim/: dashboard.html  (+9 more)
controle/templatetags/: format_filters.py
orcrim/: asgi.py  settings.py  urls.py  wsgi.py
(+57 files in other folders)
